--- a/app_server/views/location-info.jade
+++ b/app_server/views/location-info.jade
@@ -39,8 +39,7 @@ block content
             .panel-heading
               h2.panel-title Location map
             .panel-body
-              img.img-responsive.img-rounded(src="http://api.map.baidu.com/staticimage?width=400&height=350&zoom=17&scale=2&markerStyles=l,1&center=#{location.coords.lat},#{location.coords.lng}&markers=#{location.coords.lat},#{location.coords.lng}")
-              //- img.img-responsive.img-rounded(src="http://api.map.baidu.com/staticimage?center=#{location.coords.lat},#{location.coords.lng}&zoom=17&width=400&height=350&markers=#{location.coords.lat},#{location.coords.lng}&scale=2")
+              img.img-responsive.img-rounded(src="http://api.map.baidu.com/staticimage?width=400&height=350&zoom=17&scale=2&markerStyles=l,1&center=#{location.coords.lng},#{location.coords.lat}&markers=#{location.coords.lng},#{location.coords.lat}")
               //- img.img-responsive.img-rounded(src="http://maps.googleapis.com/maps/api/staticmap?center=#{location.coords.lat},#{location.coords.lng}&zoom=17&size=400x350&sensor=false&markers=#{location.coords.lat},#{location.coords.lng}&scale=2")
       .row
         .col-xs-12
