Consuming a REST API
Using an API from inside Express.
Fix some bugs.

--- a/app_server/views/layout.jade
+++ b/app_server/views/layout.jade
@@ -26,5 +26,6 @@ html
           .col-xs-12
             small &copy; Weimin Guo 2016
     
-    script(src='javascript/jquery-3.1.0.min.js')
+    script(src='/javascripts/jquery-3.1.0.min.js')
     script(src='/bootstrap/js/bootstrap.min.js')
+    script(src='/javascripts/validation.js')
