--- a/app_server/views/_includes/sharedHTMLfunctions.jade
+++ b/app_server/views/_includes/sharedHTMLfunctions.jade
@@ -3,3 +3,11 @@ mixin outputRating(rating)
     span.glyphicon.glyphicon-star
   - for (i = rating; i < 5; i++)
     span.glyphicon.glyphicon-star-empty
+
+mixin formatDate(dateString)
+  -var date = new Date(dateString);
+  -var d = date.getDay();
+  -var m = date.getMonth() + 1;
+  -var y = date.getFullYear();
+  -var output = [y, m, d].join('-');
+  =output
